--- a/Stopwatch/Stopwatch/Base.lproj/Main.storyboard
+++ b/Stopwatch/Stopwatch/Base.lproj/Main.storyboard
@@ -100,6 +100,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <color key="backgroundColor" red="0.9733584206" green="0.9733584206" blue="0.9733584206" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstItem="giU-KV-iF8" firstAttribute="centerY" secondItem="6pe-WO-uvj" secondAttribute="centerY" id="3Nc-DK-Y5m"/>
                                                 <constraint firstItem="LPo-fU-ziL" firstAttribute="baseline" secondItem="giU-KV-iF8" secondAttribute="firstBaseline" id="6GQ-DX-Dif"/>
